<?xml version="1.0" encoding="UTF-8"?>
<!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor 
	license agreements. See the NOTICE file distributed with this work for additional 
	information regarding copyright ownership. The ASF licenses this file to 
	You under the Apache License, Version 2.0 (the "License"); you may not use 
	this file except in compliance with the License. You may obtain a copy of 
	the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required 
	by applicable law or agreed to in writing, software distributed under the 
	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
	OF ANY KIND, either express or implied. See the License for the specific 
	language governing permissions and limitations under the License. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>de.fhg.ids</groupId>
	<artifactId>camel-ids</artifactId>
	<packaging>jar</packaging>
	<version>1.0.0</version>

	<name>Camel IDS Component</name>
	<url>http://camel.apache.org</url>

	<properties>
		<camel-version>2.18.0</camel-version>
		<jetty-version>8.1.19.v20160209</jetty-version>
		<jetty-version>9.2.15.v20160210</jetty-version>
		<mockito-version>1.10.19</mockito-version>
		<ahc-version>2.0.2</ahc-version>
		<docker.follow>false</docker.follow>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<repositories>
		<repository>
			<id>nexus</id>
			<url>http://repository.netsec.aisec.fraunhofer.de/repository/releases</url>
		</repository>
	</repositories>
	<dependencies>
               <dependency>
                        <groupId>de.fhg.ids</groupId>
                        <artifactId>rat-repository</artifactId>
                        <version>1.0.0</version>
                </dependency>

		<dependency>
			<groupId>de.fhg.ids</groupId>
			<artifactId>api</artifactId>
			<version>1.0.0</version>
		</dependency>

		<!-- Camel -->
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-core</artifactId>
			<version>${camel-version}</version>
		</dependency>

		<!-- Jetty Websockets -->
		<dependency>
			<groupId>org.eclipse.jetty.websocket</groupId>
			<artifactId>websocket-server</artifactId>
			<version>${jetty-version}</version>
		</dependency>

		<dependency>
			<groupId>org.eclipse.jetty.websocket</groupId>
			<artifactId>websocket-client</artifactId>
			<version>${jetty-version}</version>
		</dependency>
		<dependency>
                        <groupId>org.glassfish.jersey.containers</groupId>
                        <artifactId>jersey-container-servlet-core</artifactId>
                        <version>2.7</version>
                </dependency>

		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-servlet</artifactId>
			<version>${jetty-version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-servlets</artifactId>
			<version>${jetty-version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-jmx</artifactId>
			<version>${jetty-version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-ahc</artifactId>
			<version>${camel-version}</version>
		</dependency>
		<dependency>
			<groupId>org.asynchttpclient</groupId>
			<artifactId>async-http-client</artifactId>
			<version>${ahc-version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.6.2</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-test</artifactId>
			<version>${camel-version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>${mockito-version}</version>
			<scope>test</scope>
		</dependency>
		<!-- JNR-Unixsocket -->
		<dependency>
			<groupId>com.github.jnr</groupId>
			<artifactId>jnr-unixsocket</artifactId>
			<version>0.13</version>
		</dependency>
		<!-- Google gson -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.0</version>
		</dependency>
		<!-- tpm2j -->
		<dependency>
			<groupId>de.fraunhofer.aisec</groupId>
			<artifactId>tpm2j</artifactId>
			<version>1.0.4</version>
		</dependency>
		<dependency>
			<groupId>io.fabric8</groupId>
			<artifactId>docker-maven-plugin</artifactId>
			<version>0.18.1</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-jdk14</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-nop</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>
	<build>
		<defaultGoal>install</defaultGoal>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.camel</groupId>
				<artifactId>camel-maven-plugin</artifactId>
				<version>${camel-version}</version>
			</plugin>

			<!-- This plugin creates an OSGi-compliant MANIFEST.MF from your bnd.cnf -->
			<plugin>
				<groupId>biz.aQute.bnd</groupId>
				<artifactId>bnd-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<goals>
							<goal>bnd-process</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19</version>
				<configuration>
					<argLine>-Djavax.net.ssl.trustStore=${project.basedir}/src/test/resources/jsse/localhost.ks</argLine>
					<excludes>
						<exclude>**/WebsocketEndpointTest.java</exclude>
						<exclude>**/WebsocketComponentTest.java</exclude>
					</excludes>
				</configuration>

			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<archive>
						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>io.fabric8</groupId>
				<artifactId>docker-maven-plugin</artifactId>
				<version>0.18.1</version>
				<configuration>
					<startParallel>true</startParallel>
					<showLogs>true</showLogs>
				</configuration>
				<executions>
					<execution>
						<id>stop-tpm2d</id>
						<phase>initialize</phase>
						<goals>
							<goal>stop</goal>
							<goal>remove</goal>
						</goals>
						<configuration>
							<images>
								<image>
									<name>registry.netsec.aisec.fraunhofer.de/ids/tpm2dsim:latest</name>
								</image>
							</images>
						</configuration>
					</execution>
					<execution>
						<id>stop-ttp</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>stop</goal>
							<goal>remove</goal>
						</goals>
						<configuration>
							<images>
								<image>
									<name>registry.netsec.aisec.fraunhofer.de/ids/ttpsim:latest</name>
								</image>
							</images>
						</configuration>
					</execution>
					<execution>
						<id>run-tpm2d</id>
						<phase>compile</phase>
						<goals>
							<goal>start</goal>
						</goals>
						<configuration>
							<images>
								<image>
									<name>registry.netsec.aisec.fraunhofer.de/ids/tpm2dsim:latest</name>
									<alias>tpm2d-sim</alias>
									<run>
										<volumes>
											<bind>
												<volume>${project.basedir}/tpm2sim/socket/:/data/cml/communication/tpm2d/</volume>
											</bind>
										</volumes>
										<cmd>
											/tpm2d/cml-tpm2d
										</cmd>
									</run>
								</image>
							</images>
						</configuration>
					</execution>
					<execution>
						<id>run-ttp</id>
						<phase>compile</phase>
						<goals>
							<goal>start</goal>
						</goals>
						<configuration>
							<images>
								<image>
									<name>registry.netsec.aisec.fraunhofer.de/ids/ttpsim:latest</name>
									<alias>ttp-sim</alias>
									<run>
										<ports>
											<port>7331:29663</port>
										</ports>
										<wait>
											<http>
												<url>
													http://127.0.0.1:7331
												</url>
												<method>
													GET
												</method>
												<status>
													200..399
												</status>
											</http>
											<time>10000</time>
										</wait>
										<cmd>
											/tpm2d/ttp.py
										</cmd>
									</run>
								</image>
							</images>
						</configuration>
					</execution>	
					<execution>
						<id>remove-tpm2d</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>stop</goal>
							<goal>remove</goal>
						</goals>
						<configuration>
							<images>
								<image>
									<name>registry.netsec.aisec.fraunhofer.de/ids/tpm2dsim:latest</name>
								</image>
							</images>
						</configuration>
					</execution>
					<execution>
						<id>remove-ttp</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>stop</goal>
							<goal>remove</goal>
						</goals>
						<configuration>
							<images>
								<image>
									<name>registry.netsec.aisec.fraunhofer.de/ids/ttpsim:latest</name>
								</image>
							</images>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
